<resources>
    <string name="app_name">Здоров\'Я</string>
    <string name="title_activity_recommendation_sleep">Рекомендации</string>
    <string name="date">Дата</string>
    <string name="protein_g">Белки, г</string>
    <string name="fat_g">Жиры, г</string>
    <string name="carbohydrate_g">Углеводы, г</string>
    <string name="zero">0</string>
    <string name="calories">кКал</string>
    <string name="weightProduct">Вес порции в граммах:</string>
    <string name="_100g">100г</string>
    <string name="enterProduct">Введите блюдо</string>
    <string name="add">Добавить</string>
    <string name="entrance">Вход</string>
    <string name="loginAuth">Логин:</string>
    <string name="passwordAuth">Пароль:</string>
    <string name="enterLogin">Введите логин</string>
    <string name="enterPassword">Введите пароль</string>
    <string name="remember">Запомнить</string>
    <string name="signIn">Войти</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="health">Здоровье</string>
    <string name="imageSelection">Выбор картинки</string>
    <string name="downloadFromGallery">Загрузить из галереи</string>
    <string name="save">Сохранить</string>
    <string name="statisticsNutr">Статистика</string>
    <string name="protein">Белки</string>
    <string name="fat">Жиры</string>
    <string name="carbohydrate">Углев</string>
    <string name="year">Год</string>
    <string name="month">Месяц</string>
    <string name="week">Неделя</string>
    <string name="diapason">10-17 марта 2020</string>
    <string name="dateExample">17 марта</string>
    <string name="valueWater">1234 мл</string>
    <string name="total">Всего</string>
    <string name="average">Среднее</string>
    <string name="_20_000">20 000</string>
    <string name="_1950">1950</string>
    <string name="title">Название</string>
    <string name="fillOutAProfile">Заполните профиль</string>
    <string name="imageSelectionReg">Выберите картинку</string>
    <string name="loginReg">Логин</string>
    <string name="passwordReg">Пароль</string>
    <string name="replayPasswordReg">Повторите пароль</string>
    <string name="firstNameReg">Имя</string>
    <string name="lastNameReg">Фамилия</string>
    <string name="heightReg">Рост в см</string>
    <string name="weightReg">Вес в кг</string>
    <string name="dateOfBirthReg">Дата рождения дд.мм.гггг</string>
    <string name="genderReg">Пол</string>
    <string name="genderBoyReg">Мужской</string>
    <string name="genderGirlReg">Женский</string>
    <string name="signUpReg">Зарегистрироваться</string>
    <string name="editing">Редактирование</string>
    <string name="imageSelectionSet">Выберите картинку</string>
    <string name="loginSetProf">Логин</string>
    <string name="passwordSetProf">Пароль</string>
    <string name="replayPasswordSetProf">Повторите пароль</string>
    <string name="firstNameSetProf">Имя</string>
    <string name="lastNameSetProf">Фамилия</string>
    <string name="heightSetProf">Рост в см</string>
    <string name="weightSetProf">Вес в кг</string>
    <string name="dateOfBirthSetProf">Дата рождения дд.мм.гггг</string>
    <string name="genderSetProf">Пол</string>
    <string name="genderBoySetProf">Мужской</string>
    <string name="genderGirlSetProf">Женский</string>
    <string name="saveSetProf">Сохранить</string>
    <string name="statisticsSleep">Статистика</string>
    <string name="yearSleepStat">Год</string>
    <string name="monthSleepStat">Месяц</string>
    <string name="weekSleepStat">Неделя</string>
    <string name="diapasonSleepStat">10-17 марта 2020</string>
    <string name="dateSleepStat">17 марта</string>
    <string name="valueSleepStat">1234 мл</string>
    <string name="totalSleepStat">Всего</string>
    <string name="averageSleepStat">Среднее</string>
    <string name="_20_000SleepStat">20 000</string>
    <string name="_1950SleepStat">1950</string>
    <string name="averageFallingAsleep">Среднее время\nзасыпания</string>
    <string name="averageWakingUp">Среднее время\nпробуждения</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="statisticsWater">Статистика</string>
    <string name="yearWatStat">Год</string>
    <string name="monthWatStat">Месяц</string>
    <string name="weekWatStat">Неделя</string>
    <string name="diapasonWatStat">10-17 марта 2020</string>
    <string name="dateWatStat">17 марта</string>
    <string name="valueWatStat">1234 мл</string>
    <string name="totalWaterStat">Всего (мл)</string>
    <string name="averageWaterStat">Среднее (мл)</string>
    <string name="_20_000WatStat">20 000</string>
    <string name="_1950WatStat">1950</string>
    <string name="weightStatistics">Статистика</string>
    <string name="adding">Добавление</string>
    <string name="informationAddProduct">Данного товара нет в базе.\nВведите информацию о 100г продукта</string>
    <string name="nameProduct">Название товара</string>
    <string name="proteinAddProduct">Белки</string>
    <string name="fatAddProduct">Жиры</string>
    <string name="carbohydrateAddProduct">Углеводы</string>
    <string name="caloriesAddProduct">кКал</string>
    <string name="informationAboutProduct">Информация</string>
    <string name="nameProduct_dialog">Название</string>
    <string name="infoCaloriesPFC_dialog">Характеристики</string>
    <string name="dayOfWeek_fmp">Понедельник</string>
    <string name="breakfast_fmp">Завтрак</string>
    <string name="lunch_fmp">Обед</string>
    <string name="dinner_fmp">Ужин</string>
    <string name="protein_fmp">Белки, г</string>
    <string name="fat_fmp">Жиры, г</string>
    <string name="valueProtein_fmp">0</string>
    <string name="valueFat_fmp" />
    <string name="carbohydrate_fmp">Углеводы, г</string>
    <string name="calories_fmp">кКал</string>
    <string name="valueCarbohydrate_fmp">0</string>
    <string name="valueCalories_fmp">0</string>
    <string name="weightProduct_fmp">Вес порции в граммах:</string>
    <string name="_100g_fmp">100г</string>
    <string name="addProduct_fmp">Введите блюдо</string>
    <string name="btn_addProduct_fmp">Добавить</string>
    <string name="addDay_NutCont">Добавить день</string>
    <string name="statisticsNutCont">Статистика</string>
    <string name="control_nutrControl">Контроль</string>
    <string name="foodMenu_NutCont">Меню</string>
    <string name="calorieCalculator_NutCont">Калькулятор</string>
    <string name="weeklyTotal">Итог за неделю</string>
    <string name="calories_ifmr">кКал</string>
    <string name="valueCalories_ifmr">0</string>
    <string name="protein_ifmr">Белки</string>
    <string name="valueProtein_ifmr">0</string>
    <string name="gram_ifrmr">г.</string>
    <string name="fat_ifmr">Жиры</string>
    <string name="valueFat_ifmr">0</string>
    <string name="carbohydrate_ifmr">Углеводы</string>
    <string name="valueCarbohydrate_ifmr">0</string>
</resources>