<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_dayOfWeek_fmp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/dayOfWeek_fmp"
        android:textColor="@color/blueDarkDark"
        android:textSize="30sp"
        android:gravity="center"
        android:textAllCaps="false" />

    <LinearLayout
        android:id="@+id/ll_selectionEating"
        android:layout_below="@id/tv_dayOfWeek_fmp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/tb_breakfast_fmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textOn="@string/breakfast_fmp"
            android:textOff="@string/breakfast_fmp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@drawable/background_button_statistic_water1"/>

        <ToggleButton
            android:id="@+id/tb_lunch_fmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textOn="@string/lunch_fmp"
            android:textOff="@string/lunch_fmp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@drawable/background_button_statistic_water2"/>

        <ToggleButton
            android:id="@+id/tb_dinner_fmp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textOn="@string/dinner_fmp"
            android:textOff="@string/dinner_fmp"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textAllCaps="false"
            android:gravity="center"
            android:background="@drawable/background_button_statistic_water3"/>

    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gl_result_fm"
        android:layout_below="@id/ll_selectionEating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            android:text="@string/protein_fmp"
            android:textColor="@color/blueDarkDark"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            android:text="@string/fat_fmp"
            android:textColor="@color/blueDarkDark"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center" />


        <TextView
            android:id="@+id/tv_valueProtein_fmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            android:text="@string/valueProtein_fmp"
            android:textColor="@color/blueDarkDark"
            android:textSize="17sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_valueFat_fmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            android:text="@string/valueFat_fmp"
            android:textColor="@color/blueDarkDark"
            android:textSize="17sp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            android:text="@string/carbohydrate_fmp"
            android:textColor="@color/blueDarkDark"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            android:text="@string/calories_fmp"
            android:textColor="@color/blueDarkDark"
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_valueCarbohydrate_fmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            android:text="@string/valueCarbohydrate_fmp"
            android:textColor="@color/blueDarkDark"
            android:textSize="17sp"
            android:gravity="center" />

        <TextView
            android:id="@+id/tv_valueCalories_fmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_columnWeight="1"
            android:text="@string/valueCalories_fmp"
            android:textColor="@color/blueDarkDark"
            android:textSize="17sp"
            android:gravity="center" />

    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gl_addProduct_fmp"
        android:layout_below="@id/gl_result_fm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:columnCount="2"
        android:background="@drawable/background_listview_pager_food_menu">

        <TextView
            app:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weightProduct_fmp"
            android:textColor="@color/blueDarkDark"
            android:textSize="17sp"
            android:gravity="center" />

        <EditText
            android:id="@+id/et_weightProduct"
            app:layout_columnWeight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blueDarkDark"
            android:inputType="number"
            android:minEms="3"
            android:maxEms="3"
            android:hint="@string/_100g_fmp" />

        <AutoCompleteTextView
            android:id="@+id/actv_addProduct_fmp"
            app:layout_columnSpan="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/addProduct_fmp"
            android:textColor="@color/blueDarkDark"
            android:textSize="20sp"
            android:inputType="textVisiblePassword"
            android:minEms="6"
            android:maxEms="6"
            android:gravity="center"
            android:completionThreshold="1"/>

        <Button
            android:id="@+id/btn_addProduct_fmp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:background="@drawable/background_button_water"
            android:text="@string/btn_addProduct_fmp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_columnSpan="2" />

    </androidx.gridlayout.widget.GridLayout>


    <ListView
        android:id="@+id/lv_products_fmp"
        android:layout_below="@id/gl_addProduct_fmp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        android:background="@drawable/background_listview_pager_food_menu"/>

</RelativeLayout>