<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:layout_gravity="left"
        android:gravity="left"
        android:text="@string/informationAboutProduct"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/blueDarkDark" />

    <TextView
        android:id="@+id/tv_nameProduct_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/nameProduct_dialog"
        android:textSize="25sp"
        android:textColor="@color/blueDarkDark" />

    <TextView
        android:id="@+id/tv_infoCaloriesPFC_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="left"
        android:gravity="left"
        android:text="@string/infoCaloriesPFC_dialog"
        android:textSize="20sp"
        android:textColor="@color/blueDarkDark" />

</LinearLayout>